<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2018-2026 Babel Street Rosette Ltd.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.basistech.rosette</groupId>
    <artifactId>rosette-api-java-binding</artifactId>
    <name>rosette-api-java-binding</name>
    <version>1.36.1-SNAPSHOT</version>
    <parent>
        <artifactId>open-source-parent</artifactId>
        <groupId>com.basistech</groupId>
        <version>25.0.0</version>
        <relativePath />
    </parent>
    <packaging>pom</packaging>
    <inceptionYear>2014</inceptionYear>
    <url>https://rosette-api.github.io/java/</url>
    <scm>
        <connection>scm:git:git@github.com:rosette-api/java.git</connection>
        <developerConnection>scm:git:git@github.com:rosette-api/java.git</developerConnection>
        <tag>rosette-api-java-binding-1.34.0</tag>
    </scm>
    <description>This is the Java binding for the Babel Street Analytics API. The classes in here help Java applications to communicate with the Analytics API.</description>
    <distributionManagement>
        <site>
            <id>site</id>
            <url>scm:git:git@github.com:rosette-api/java.git</url>
        </site>
    </distributionManagement>
    <properties>
        <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>
        <commons-codec.version>1.20.0</commons-codec.version>
        <google-testing-compile.version>0.21.0</google-testing-compile.version>
        <jakarta-validation-api.version>3.1.1</jakarta-validation-api.version>
        <java-poet.version>1.13.0</java-poet.version>
        <junit.version>6.0.1</junit.version>
        <lombok.version>1.18.42</lombok.version>
        <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
        <mockserver.version>5.15.0</mockserver.version>
        <reflections.version>0.10.2</reflections.version>
    </properties>
    <modules>
        <module>annotations</module>
        <module>model</module>
        <module>json</module>
        <module>common</module>
        <module>api</module>
        <module>all</module>
        <module>examples</module>
        <module>release</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}</directory>
                            <includes>
                                <include>**/mockserver.log</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${basedir}/model/target/generated-sources/delombok/</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>aggregate-javadoc</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>${maven-javadoc-plugin.version}</version>
                            <executions>
                                <execution>
                                    <id>gh-pages</id>
                                    <goals>
                                        <goal>aggregate-jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <!-- is there a better way? builder-helper has add-source but no remove-source -->
                                <sourcepath>model/target/generated-sources/delombok;
                                    json/src/main/java;
                                    common/src/main/java;
                                    api/src/main/java</sourcepath>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
